k8s/app/traefik-config.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ingress-uma
  namespace: aggregator-app
spec:
  forwardAuth:
    address: "http://ingress-uma.aggregator-app.svc.cluster.local/authorize"
    trustForwardHeader: true
    authResponseHeaders:
      - Authorization
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-uma-prefix
  namespace: aggregator-app
spec:
  stripPrefix:
    prefixes:
      - "/uma"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: replace-path
  namespace: aggregator-app
spec:
  replacePathRegex:
    regex: "^/services/[^/]+/[^/]+(?:/(.*))?$"
    replacement: "/$1"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cors
  namespace: aggregator-app
spec:
  headers:
    accessControlAllowOriginList:
      - "*"
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - PATCH
      - DELETE
      - HEAD
      - OPTIONS
    accessControlAllowHeaders:
      - "*"
    accessControlExposeHeaders:
      - "*"
    accessControlMaxAge: 86400
    accessControlAllowCredentials: false
