k8s/app/aggregator.yaml
# ========================
# 4 Deployment
# ========================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregator-server
  namespace: aggregator-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aggregator-server
  template:
    metadata:
      labels:
        app: aggregator-server
    spec:
      serviceAccountName: aggregator-sa
      containers:
        - name: aggregator-server
          image: aggregator-server
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
---
# ========================
# 5 Service: expose aggregator
# ========================
apiVersion: v1
kind: Service
metadata:
  name: aggregator-server-svc
  namespace: aggregator-app
spec:
  type: ClusterIP
  selector:
    app: aggregator-server
  ports:
    - port: 5000
      targetPort: 5000
---
# =======================
# 6 Ingress
# ========================
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: aggregator-server-ingressroute
  namespace: aggregator-app
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`aggregator.local`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: cors
          namespace: aggregator-app
      services:
        - name: aggregator-server-svc
          port: 5000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: aggregator-server-registration-ingressroute
  namespace: aggregator-app
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`aggregator.local`) && PathPrefix(`/registration`)
      kind: Rule
      middlewares:
        - name: cors
          namespace: aggregator-app
      services:
        - name: aggregator-server-svc
          port: 5000
---
